--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -1,5 +1,6 @@
 <head>
     <link href="index.css" rel="stylesheet" />
+    <link href="../style.css" rel="stylesheet" />
 </head>
 <body>
     <div id="searchbar-div">
@@ -58,6 +59,13 @@
         <div class="wd-suggested-post wd-float-left">
             <p class="wd-topic">Fat Bear Week News</p>
             <p class="wd-post-title wd-white-text">BREAKING NEWS: Tank is also a pretty cool bear! He is very ready for winter. Click here to find out how!</p>
+        </div>
+        <img class="wd-float-right wd-suggested-image" src="../FatBearWeekBanner.jpg" />
+    </div>
+    <div class="wd-no-outline wd-suggested">
+        <div class="wd-suggested-post wd-float-left">
+            <p class="wd-topic">Non-Fat Bear Week News</p>
+            <p class="wd-post-title wd-white-text">Nothing else is happening.</p>
         </div>
         <img class="wd-float-right wd-suggested-image" src="../FatBearWeekBanner.jpg" />
     </div>
