--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -7,7 +7,7 @@
         <p class="wd-white-text" id="title-bookmarks">Bookmarks</p>
         <p id="title-user">@WebDev</p>
     </div>
-    <div>
+    <div class="wd-bookmark">
         <div class="wd-avatar-div wd-float-left">
             <img class="wd-avatar-image" src="../otis.jpg" />
         </div>
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="wd-bookmark">
         <div class="wd-avatar-div wd-float-left">
             <img class="wd-avatar-image" src="../pandabear.jpg" />
         </div>
