--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -1,197 +1,15 @@
 <head>
-    <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet" />
-    <link href="index.css" rel="stylesheet" />
+    <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../vendors/bootswatch/bootstrap.min.css" rel="stylesheet"/>
+    <link href="index.css" rel="stylesheet"/>
+    <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+           integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+           crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>Explore screen</title>
 </head>
 <body>
-    <div class="container mt-2">
-        <div class="row">
-            <div class="col-xxl-2 col-xl-2 col-lg-1 col-md-2 col-sm-2" >
-                <div class="list-group mb-2 float-start w-100 ">
-                    <a class="list-group-item fa-brands fa-twitter pt-2 pb-2"></a>
-                    <a class="list-group-item" href="home.html"><i class="fa fa-home pt-1 me-2"></i><span class="d-xl-inline d-lg-none d-md-none d-sm-none"> Home</span></a>
-                    <a class="list-group-item active" href="explore.html"><i class="fa fa-hashtag pt-1 me-2"></i><span class="d-xl-inline d-lg-none d-md-none d-sm-none"> Explore</span></a>
-                    <a class="list-group-item" href="notifications.html"><i class="fa fa-bell pt-1 me-2"></i><span class="d-xl-inline d-lg-none d-md-none d-sm-none"> Notifications</span></a>
-                    <a class="list-group-item" href="messages.html"><i class="fa fa-envelope pt-1 me-2"></i><span class="d-xl-inline d-lg-none d-md-none d-sm-none"> Messages</span></a>
-                    <a class="list-group-item" href="bookmarks.html"><i class="fa fa-bookmark pt-1 me-2"></i><span class="d-xl-inline d-lg-none d-md-none d-sm-none"> Bookmarks</span></a>
-                    <a class="list-group-item" href="lists.html"><i class="fa fa-list pt-1 me-2"></i><span class="d-xl-inline d-lg-none d-md-none d-sm-none"> Lists</span></a>
-                    <a class="list-group-item" href="profile.html"><i class="fa fa-user pt-1 me-2"></i><span class="d-xl-inline d-lg-none d-md-none d-sm-none"> Profile</span></a>
-                    <a class="list-group-item ps-1" href="more.html">
-                        <span class="fa-stack fa-2xs ms-2 mb-1">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-ellipsis fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <span class="d-xxl-inline d-xl-inline d-lg-none d-md-none d-sm-none">
-                         More</span></a>
-                </div>
-                <button class="btn bg-primary rounded-pill text-white fw-bold" id="tweetBtn">Tweet</button>
-            </div>
-            <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-10 col-sm-10">
-                <div class="row">
-                    <div class="col-11">
-                        <div class="input-group rounded-pill border border-2">
-                            <span class="input-group-text bg-white rounded-pill border-0">
-                                <button class="btn border-0 fa fa-search ps-1 p-0"></button>
-                            </span>
-                            <input type="text" id="searchbar" class="form-control rounded-pill border-0" placeholder="Search">
-                        </div>
-                    </div>
-                    <div class="container-fluid col-1 position-relative">
-                        <button class="btn rounded-circle border-0 position-absolute translate-middle start-50 top-50">
-                            <i class="fa fa-gear fa-2x blue position-absolute translate-middle start-50 top-50"></i>
-                        </button>
-                    </div>
-                </div>
-                <ul class="nav nav-tabs mt-1">
-                    <li class="nav-item"><a class="nav-link active" href="for-you.html">For you</a></li>
-                    <li class="nav-item"><a class="nav-link" href="trending.html">Trending</a></li>
-                    <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                    <li class="nav-item"><a class="nav-link" href="sports.html">Sports</a></li>
-                    <li class="nav-item d-md-inline d-sm-none"><a class="nav-link" href="entertainment.html">Entertainment</a></li>
-                </ul>
-                <div class="container-fluid position-relative p-0">
-                    <img class="m-0 mt-1 img-fluid" src="../../images/starship.jpg" />
-                    <span class="position-absolute start-0 bottom-0 ps-2 pb-1 fs-3 fw-bolder text-white">SpaceX's Starship</span>
-                </div>
-                <div class="container">
-                    <div class="row border border-2 border-top-0 p-1 align-items-center">
-                        <div class="col-10 p-2">
-                            <p class="gray m-0">Web Development</p>
-                            <p class="fw-bold text-black m-0">
-                                ReactJS <i class="fa fa-check-circle"></i>
-                                <span class="gray fw-normal"> - 2h</span>
-                            </p>
-                            <p class="fw-bold text-black m-0">
-                                React.js is a component based front end library that makes it very easy to build Single Page Applications or SPAs
-                            </p>
-                        </div>
-                        <div class="col-2 p-0 pe-1">
-                            <img class="img-fluid rounded-4 float-end" src="../../images/reactjs_logo.png" />
-                        </div>
-                    </div>
-                    <div class="row border border-2 border-top-0 p-1 align-items-center">
-                        <div class="col-10 p-2">
-                            <p class="fw-bold text-black m-0">
-                                JavaScript <i class="fa fa-check-circle"></i>
-                                <span class="gray fw-normal"> - 2h</span>
-                            </p>
-                            <p class="fw-bold text-black m-0">
-                                JavaScript is programming language that can run on browsers as well as desktops
-                            </p>
-                            <p class="gray m-0">
-                                123K Tweets
-                            </p>
-                        </div>
-                        <div class="col-2 p-0 pe-1">
-                            <img class="img-fluid rounded-4 float-end" src="../../images/javascript_logo.png" />
-                        </div>
-                    </div>
-                    <div class="row border border-2 border-top-0 p-1 align-items-center">
-                        <div class="col-10 p-2">
-                            <p class="gray m-0">Web Development</p>
-                            <p class="fw-bold text-black m-0">
-                                JQuery
-                            </p>
-                            <p class="gray m-0">
-                                123K Tweets
-                            </p>
-                        </div>
-                        <div class="col-2 p-0 pe-1">
-                            <img class="img-fluid rounded-4 float-end" src="../../images/jquery_logo.png" />
-                        </div>
-                    </div>
-                    <div class="row border border-2 border-top-0 p-1 align-items-center">
-                        <div class="col-10 p-2">
-                            <p class="gray mb-0">Web Development</p>
-                            <p class="fw-bold text-black m-0">
-                                NodeJS <i class="fa fa-check-circle"></i>
-                                <span class="gray fw-normal"> - 2h</span>
-                            </p>
-                            <p class="gray m-0">
-                                123K Tweets
-                            </p>
-                        </div>
-                        <div class="col-2 p-0 pe-1">
-                            <img class="img-fluid rounded-4 float-end" src="../../images/nodejs_logo.png" />
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xxl-4 col-xl-4 col-lg-4 d-lg-inline d-md-none d-sm-none">
-                <ul class="list-group">
-                    <li class="list-group-item fw-bold">Who to follow</li>
-                    <li class="list-group-item">
-                        <div class="row align-items-center">
-                            <div class="col-xxl-2 col-xl-2 col-lg-2 p-1">
-                                <img class="img-fluid img-square rounded-circle" src="../../images/java_logo.svg" />
-                            </div>
-                            <div class="col-xxl-6 col-xl-7 col-lg-7 p-1">
-                                <p class="fw-bold mb-1">Java <i class="fa fa-circle-check"></i></p>
-                                <p class="mb-0">@Java</p>
-                            </div>
-                            <div class="col-xxl-4 col-xl-3 col-lg-3">
-                                <button class="btn bg-primary rounded-pill text-white fw-bold float-end">Follow</button>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row align-items-center">
-                            <div class="col-xxl-2 col-xl-2 col-lg-2 p-1">
-                                <img class="img-fluid img-square rounded-circle" src="../../images/relativityspace.jpeg" />
-                            </div>
-                            <div class="col-xxl-6 col-xl-7 col-lg-7 p-1">
-                                <p class="fw-bold mb-1">Relativity Space <i class="fa fa-circle-check"></i></p>
-                                <p class="mb-0">@relativityspace</p>
-                            </div>
-                            <div class="col-xxl-4 col-xl-3 col-lg-3">
-                                <button class="btn bg-primary rounded-pill text-white fw-bold float-end">Follow</button>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row align-items-center">
-                            <div class="col-xxl-2 col-xl-2 col-lg-2 p-1">
-                                <img class="img-fluid img-square rounded-circle" src="../../images/virgin_logo.svg" />
-                            </div>
-                            <div class="col-xxl-6 col-xl-7 col-lg-7 p-1">
-                                <p class="fw-bold mb-1">Virgin Galatic <i class="fa fa-circle-check"></i></p>
-                                <p class="mb-0">@virgingalatic</p>
-                            </div>
-                            <div class="col-xxl-4 col-xl-3 col-lg-3">
-                                <button class="btn bg-primary rounded-pill text-white fw-bold float-end">Follow</button>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row align-items-center">
-                            <div class="col-xxl-2 col-xl-2 col-lg-2 p-1">
-                                <img class="img-fluid img-square rounded-circle" src="../../images/NASA_logo.svg.png" />
-                            </div>
-                            <div class="col-xxl-6 col-xl-7 col-lg-7 p-1">
-                                <p class="fw-bold mb-1">NASA <i class="fa fa-circle-check"></i></p>
-                                <p class="mb-0">@NASA</p>
-                            </div>
-                            <div class="col-xxl-4 col-xl-3 col-lg-3">
-                                <button class="btn bg-primary rounded-pill text-white fw-bold float-end">Follow</button>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row align-items-center">
-                            <div class="col-xxl-2 col-xl-2 col-lg-2 p-1">
-                                <img class="img-fluid img-square rounded-circle" src="../../images/tesla.jpg" />
-                            </div>
-                            <div class="col-xxl-6 col-xl-7 col-lg-7 p-1">
-                                <p class="fw-bold mb-1">Tesla <i class="fa fa-circle-check"></i></p>
-                                <p class="mb-0">@Tesla</p>
-                            </div>
-                            <div class="col-xxl-4 col-xl-3 col-lg-3">
-                                <button class="btn bg-primary rounded-pill text-white fw-bold float-end">Follow</button>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+    <div class="container" id="wd-explore"></div>
+    <script src="index.js" type="module"></script>
 </body>
